@@ -56,5 +56,6 @@ dss_preprocess.m
 dss_sphere.m
 pre_sphere.m
 
-Also, it has a denoise_avg2 added, which specifically allows for epoch-boundary respecting averaging, cell-input, and specific baseline options
-
+New functions, not present in the original toolbox, but based on the original:
+denoise_avg2, which specifically allows for epoch-boundary respecting averaging, cell-input, and specific baseline options. 
+denoise_filter2, which specifically respects epoch boundaries, supports cell-input, and more flexible filters
